breadcrumbs horizontal scroll fix

--- a/wp-content/themes/cat/scss/system/components/breadcrumbs.scss
+++ b/wp-content/themes/cat/scss/system/components/breadcrumbs.scss
@@ -24,5 +24,8 @@
 .articlepage{
 	.breadcrumbs li:last-of-type a{
 		position: static;
+		&::before{
+			display: none;
+		}
 	}
 }
